# kubics-accountant

./: CMakeLists.txt  README.md
source/: CMakeLists.txt  accountant.cpp  app.cpp  base.cpp  main.cpp  parser.cpp
source/headers/: accountant.h  accountant.hpp  app.h  app.hpp  base.h  base.hpp  errors.h  errors.hpp  parser.h  parser.hpp
